# top-spreaders-dataset

./: .gitignore  .pylintrc  LICENSE  README.md  mln_potentials_eda.ipynb  pyproject.toml  requirements.txt  tox.ini
.dvc/: config
eda_utils/: __init__.py  csv_loader.py  globals.py  plotter.py
env/: conda.yaml  requirements.txt
infmax_data_utils/loaders/: constants.py  net_loader.py  sp_loader.py
infmax_data_utils/misc/: plotter.py
ns-data-sources/raw/multi_layer_networks/: .gitignore  CONTROL_fmt.dvc
ns-data-sources/raw/single_layer_networks/: .gitignore  citation_full_pubmed.dvc  coauthor_physics.dvc  elliptic_bitcoin.dvc  facebook_pp.dvc  heterophilous_questions.dvc  twitch_de.dvc
ns-data-sources/spreading_potentials/multi_layer_networks/: .gitignore  fmri74.dvc  small_real.dvc
ns_datasources/: __main__.py
nsl_data_sources/centralities/multi_layer_networks/: .gitignore  artificial_er.dvc  artificial_pa.dvc  artificial_random.dvc  artificial_small.dvc  arxiv_netscience_coauthorship.txt.dvc  arxiv_netscience_coauthorship_math.oc.txt.dvc  aucs.csv.dvc  aucs.txt.dvc  ckm_physicians.csv.dvc  ckm_physicians.txt.dvc  eu_transport_klm.csv.dvc  eu_transport_klm.txt.dvc  eu_transportation.csv.dvc  eu_transportation.txt.dvc  fmri74.csv.dvc  fmri74.txt.dvc  (+10 more)
nsl_data_utils/: __init__.py
nsl_data_utils/loaders/: __init__.py  centrality_loader.py  constants.py  fmri74.py  net_loader.py  sp_loader.py
nsl_data_utils/misc/: calc_centralities.py  generate.py  generate_random_graphs.py  generators.py  plotter.py
tsds_utils/: __init__.py
tsds_utils/loaders/: constants.py  sp_loader.py
tsds_utils/misc/: calc_centralities.py  generate.py  plotter.py
(+72 files in other folders)
