[build-system]
requires = ["setuptools~=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nsl_data_utils"
version = "1.0.0"
requires-python = ">=3.12"
authors = [
    {name = "Piotr Bródka", email="piotr.brodka@pwr.edu.pl"},
    {name = "Michał Czuba", email="michal.czuba@pwr.edu.pl"},
    {name = "Adam Piróg"},
    {name = "Mateusz Stolarski"},
]
description = "Inf-Max Data Utils"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["env/requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["*tests*"]
